fix: Resolve dependency and code quality issues after release 4.1.0
- Fix cui-test-value-objects dependency version (use parent POM version 2.1.1)
- Suppress OpenRewrite LogRecord warnings with cui-rewrite:disable comments
- Add project documentation (CLAUDE.md, doc/commands.md)
- Update GitHub workflows configuration
- Format all source files with license headers
- Resolve deprecation warnings in test code

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>