@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -116,7 +116,7 @@ public class JsfSetupExtension implements TestInstancePostProcessor, BeforeEachC
         retrieveEnableJSFAnnotations(testInstance.getClass(), environments);
         if (!environments.isEmpty()) {
             // Use the outermost annotation
-            useIdentityResourceBundle = environments.get(0).useIdentityResourceBundle();
+            useIdentityResourceBundle = environments.getFirst().useIdentityResourceBundle();
         }
 
         var environment = new JsfEnvironmentHolder(setup);
@@ -287,7 +287,7 @@ public class JsfSetupExtension implements TestInstancePostProcessor, BeforeEachC
         // Apply method-level EnableJsfEnvironment annotation if present
         if (!methodAnnotations.isEmpty()) {
             // Method-level annotation found, apply it
-            EnableJsfEnvironment annotation = methodAnnotations.get(0);
+            EnableJsfEnvironment annotation = methodAnnotations.getFirst();
 
             // Update the identity resource bundle setting
             ConfigurableApplication.createWrapAndRegister((MockFacesContext) environment.getFacesContext())
